--- a/main.html
+++ b/main.html
@@ -7,9 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="MoneyCount">Money: 0</h1>
+    <h1 id="Hunger">Hunger: %0</h1>
+    <h1 id="Health">Health: %0</h1>
+    <h1 id="MoneyCount">Money: $0</h1>
+    <h1 id="Status">Status: </h1>
+    <h1 id="Happy">Happy: 0</h1>
+    <h1 id="RopeChance">Ropechance: %0</h1>
     
-    <button id="WorkButton" onclick="workFunction();">WORK</button>
+    <button id="FeedButton" onclick="">Feed</button>
+    <button id="Showerbutton" onclick="">Shower</button>
+    <button id="PlayButton" onclick="">Play</button>
+    <button id="WorkButton" onclick="workFunction();">Work</button>
     <script src="main.js"></script>
 </body>
 </html>
