--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
     <!-- Stats in top-right -->
     <div id="stats">
       <h3 id="Hunger">Hunger: %0</h3>
-      <h3 id="Health">Health: %0</h3>
+      <h3 id="Hygiene">Hygiene: %0</h3>
       <h3 id="MoneyCount">Money: $0</h3>
       <h3 id="Status">Status: </h3>
       <h3 id="Happy">Happy: 0</h3>
@@ -45,6 +45,24 @@
       <button id="WorkButton">Work</button>
     </div>
   </div>
+
+
+  <!-- Floating Music Player -->
+<div id="music-player">
+  <h4 id="trackName">Track 1</h4>
+  <div id="player-buttons">
+    <button id="prevTrack">-</button>
+    <button id="nextTrack">+</button>
+  </div>
+  <label for="volumeSlider">Volume:</label>
+  <input type="range" id="volumeSlider" min="0" max="100" value="20">
+</div>
+
+
+  <script src="main.js"></script>
+
+</body>
+</html>
 
   <script src="main.js"></script>
 </body>
