Added list for applying to jobs Moved a little bit of job code into job.js from main.js Changed music player to default 0 audio it was annoying me Fixed bug where volume reset when changing track

--- a/main.html
+++ b/main.html
@@ -9,11 +9,11 @@
 <body>
 
   <!-- Banner -->
-<div id="banner">
+<!-- <div id="banner">
   <marquee behavior="scroll" direction="left" scrollamount="8">
     <span class="rainbow">♠️CHUD SIMULATOR 2025♠️</span>
   </marquee>
-</div>
+</div> -->
 
 
   <!--ROPECEL -->
@@ -47,6 +47,7 @@
   </div>
 
 
+
   <!-- Floating Music Player -->
 <div id="music-player">
   <div id="music-playerheader">
@@ -57,9 +58,15 @@
     <button id="nextTrack">+</button>
   </div>
   <label for="volumeSlider">Volume:</label>
-  <input type="range" id="volumeSlider" min="0" max="100" value="20">
+  <input type="range" id="volumeSlider" min="0" max="100" value="0">
 </div>
 
+<div id="jobListDiv">
+  <h3>You have no job! Apply?</h3>
+  <ul id="jobList">
+    
+  </ul>
+</div>
 
   <script src="main.js"></script>
   <script src="job.js"></script>
